Adding logout to Visaro
